--- a/Areas/Room/Views/Room/CreateHome.cshtml
+++ b/Areas/Room/Views/Room/CreateHome.cshtml
@@ -1,112 +1,307 @@
+@* <div class="container-fluid">
+<div class="row">
+<div class="col-lg-12">
+<div class="card">
+<div class="card-body">
+<!-- Centered card title -->
+<h2 class="card-title text-center">Add New Rental Property</h2>
+<div class="basic-form">
+<form action="/submitNewHome" method="POST">
+<!-- Property Name -->
+<div class="form-row">
+<div class="form-group col-md-6">
+<label>Property Name</label>
+<input type="text" class="form-control" name="homeName"
+placeholder="Enter property name" required>
+</div>
+<div class="form-group col-md-6">
+<label>Owner Name</label>
+<input type="text" class="form-control" name="ownerName"
+placeholder="Enter owner's name" required>
+</div>
+</div>
+
+<!-- Address -->
+<div class="form-group">
+<label>Address</label>
+<input type="text" class="form-control" name="address" placeholder="Enter address"
+required>
+</div>
+
+<div class="form-row">
+<!-- Number of Rooms -->
+<div class="form-group col-md-6">
+<label>Number of Rooms</label>
+<input type="number" class="form-control" name="roomCount"
+placeholder="Enter number of rooms" required>
+</div>
+
+<!-- Owner's Phone Number -->
+<div class="form-group col-md-6">
+<label>Owner's Phone Number</label>
+<input type="tel" class="form-control" name="ownerPhone"
+placeholder="Enter phone number" required>
+</div>
+</div>
+
+<div class="form-row">
+<!-- Total Area -->
+<div class="form-group col-md-6">
+<label>Total Area (m²)</label>
+<input type="number" class="form-control" name="totalArea"
+placeholder="Enter total area" required>
+</div>
+
+<!-- Property Type -->
+<div class="form-group col-md-6">
+<label>Property Type</label>
+<select class="form-control" name="type" required>
+<option selected="selected">Choose type...</option>
+<option value="Low-cost">Low-cost</option>
+<option value="High-end">High-end</option>
+<option value="Student rooms">Student rooms</option>
+</select>
+</div>
+</div>
+
+<!-- Facilities -->
+<div class="form-group">
+<label>Facilities</label>
+<textarea class="form-control" name="facilities" rows="3"
+placeholder="Wi-Fi, parking, air-conditioning, security cameras, ..."
+required></textarea>
+</div>
+<div class="form-row">
+<!-- Electricity Price -->
+<div class="form-group col-md-6">
+<label>Electricity Price (VND/kWh)</label>
+<input type="number" class="form-control" name="electricPrice"
+placeholder="Enter electricity price" required>
+</div>
+
+<!-- Water Price -->
+<div class="form-group col-md-6">
+<label>Water Price (VND/m³)</label>
+<input type="number" class="form-control" name="waterPrice"
+placeholder="Enter water price" required>
+</div>
+</div>
+
+<!-- Start Date -->
+<div class="form-group">
+<label>Start Date</label>
+<input type="date" class="form-control" name="startDate" required>
+</div>
+
+<!-- Property Image -->
+<div class="form-group">
+<label>Property Image</label>
+<input type="file" class="form-control-file" name="homeImage">
+</div>
+
+<div class="text-center">
+<button type="submit" class="btn btn-dark btn-lg px-5">Add Home</button>
+</div>
+</form>
+</div>
+</div>
+</div>
+</div>
+
+</div>
+</div> *@
+
+
+@model App.Models.RentalProperty
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-body">
-                    <!-- Centered card title -->
-                    <h2 class="card-title text-center">Add New Rental Property</h2>
+                    <h2 class="card-title text-center">Thêm Tài Sản Cho Thuê</h2>
                     <div class="basic-form">
-                        <form action="/submitNewHome" method="POST">
+                        <form asp-action="CreateHome" method="POST" enctype="multipart/form-data">
                             <!-- Property Name -->
                             <div class="form-row">
                                 <div class="form-group col-md-6">
-                                    <label>Property Name</label>
-                                    <input type="text" class="form-control" name="homeName"
-                                        placeholder="Enter property name" required>
+                                    @Html.LabelFor(m => m.PropertyName)
+                                    @Html.EditorFor(m => m.PropertyName, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class =
+                                             "form-control"
+                                            }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.PropertyName)
                                 </div>
+
+                                <!-- Owner Name -->
                                 <div class="form-group col-md-6">
-                                    <label>Owner Name</label>
-                                    <input type="text" class="form-control" name="ownerName"
-                                        placeholder="Enter owner's name" required>
+                                    @Html.LabelFor(m => m.OwnerName)
+                                    @Html.EditorFor(m => m.OwnerName, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class =
+                                             "form-control"
+                                            }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.OwnerName)
                                 </div>
                             </div>
 
                             <!-- Address -->
                             <div class="form-group">
-                                <label>Address</label>
-                                <input type="text" class="form-control" name="address" placeholder="Enter address"
-                                    required>
+                                @Html.LabelFor(m => m.Address)
+                                @Html.EditorFor(m => m.Address, new
+                                    {
+                                        htmlAttributes = new { @class = "form-control" }
+                                    })
+                                @Html.ValidationMessageFor(m => m.Address)
                             </div>
 
                             <div class="form-row">
                                 <!-- Number of Rooms -->
                                 <div class="form-group col-md-6">
-                                    <label>Number of Rooms</label>
-                                    <input type="number" class="form-control" name="roomCount"
-                                        placeholder="Enter number of rooms" required>
+                                    @Html.LabelFor(m => m.NumberOfRooms)
+                                    @Html.EditorFor(m => m.NumberOfRooms, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class =
+                                             "form-control",
+                                                type = "number"
+                                            }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.NumberOfRooms)
                                 </div>
 
-                                <!-- Owner's Phone Number -->
+                                <!-- Owner Phone Number -->
                                 <div class="form-group col-md-6">
-                                    <label>Owner's Phone Number</label>
-                                    <input type="tel" class="form-control" name="ownerPhone"
-                                        placeholder="Enter phone number" required>
+                                    @Html.LabelFor(m => m.OwnerPhoneNumber)
+                                    @Html.EditorFor(m => m.OwnerPhoneNumber, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class =
+                                             "form-control",
+                                                type = "tel"
+                                            }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.OwnerPhoneNumber)
                                 </div>
                             </div>
 
                             <div class="form-row">
                                 <!-- Total Area -->
                                 <div class="form-group col-md-6">
-                                    <label>Total Area (m²)</label>
-                                    <input type="number" class="form-control" name="totalArea"
-                                        placeholder="Enter total area" required>
+                                    @Html.LabelFor(m => m.TotalArea)
+                                    @Html.EditorFor(m => m.TotalArea, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class =
+                                             "form-control",
+                                                type = "number"
+                                            }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.TotalArea)
                                 </div>
 
                                 <!-- Property Type -->
                                 <div class="form-group col-md-6">
-                                    <label>Property Type</label>
-                                    <select class="form-control" name="type" required>
-                                        <option selected="selected">Choose type...</option>
-                                        <option value="Low-cost">Low-cost</option>
-                                        <option value="High-end">High-end</option>
-                                        <option value="Student rooms">Student rooms</option>
-                                    </select>
+                                    @Html.LabelFor(m => m.PropertyType)
+                                    @Html.DropDownListFor(m => m.PropertyType,
+                                             new SelectList(new List<SelectListItem>
+                                    {
+                                    new SelectListItem { Value = "Low-cost", Text = "Giá rẻ" },
+                                    new SelectListItem { Value = "High-end", Text = "Cao cấp" },
+                                    new SelectListItem { Value = "Student rooms", Text = "Phòng sinh viên" }
+                                    }, "Value", "Text"), "Chọn loại...", new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(m => m.PropertyType)
                                 </div>
                             </div>
 
-                            <!-- Facilities -->
+                            <!-- Facilities (Dynamically Bound Placeholder) -->
                             <div class="form-group">
-                                <label>Facilities</label>
-                                <textarea class="form-control" name="facilities" rows="3"
-                                    placeholder="Wi-Fi, parking, air-conditioning, security cameras, ..."
-                                    required></textarea>
+                                @Html.LabelFor(m => m.Facilities)
+                                @Html.EditorFor(m => m.Facilities, new
+                                    {
+                                        htmlAttributes = new
+                                        {
+                                            @class = "form-control",
+                                            rows = 3
+                                        }
+                                    })
+                                @Html.ValidationMessageFor(m => m.Facilities)
                             </div>
+
                             <div class="form-row">
                                 <!-- Electricity Price -->
                                 <div class="form-group col-md-6">
-                                    <label>Electricity Price (VND/kWh)</label>
-                                    <input type="number" class="form-control" name="electricPrice"
-                                        placeholder="Enter electricity price" required>
+                                    @Html.LabelFor(m => m.ElectricityPrice)
+                                    @Html.EditorFor(m => m.ElectricityPrice, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class =
+                                             "form-control",
+                                                type = "number"
+                                            }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.ElectricityPrice)
                                 </div>
 
                                 <!-- Water Price -->
                                 <div class="form-group col-md-6">
-                                    <label>Water Price (VND/m³)</label>
-                                    <input type="number" class="form-control" name="waterPrice"
-                                        placeholder="Enter water price" required>
+                                    @Html.LabelFor(m => m.WaterPrice)
+                                    @Html.EditorFor(m => m.WaterPrice, new
+                                        {
+                                            htmlAttributes = new
+                                            {
+                                                @class =
+                                             "form-control",
+                                                type = "number"
+                                            }
+                                        })
+                                    @Html.ValidationMessageFor(m => m.WaterPrice)
                                 </div>
                             </div>
 
                             <!-- Start Date -->
                             <div class="form-group">
-                                <label>Start Date</label>
-                                <input type="date" class="form-control" name="startDate" required>
+                                @Html.LabelFor(m => m.StartDate)
+                                @Html.EditorFor(m => m.StartDate, new
+                                    {
+                                        htmlAttributes = new
+                                        {
+                                            @class = "form-control",
+                                            type = "date"
+                                        }
+                                    })
+                                @Html.ValidationMessageFor(m => m.StartDate)
                             </div>
 
                             <!-- Property Image -->
                             <div class="form-group">
-                                <label>Property Image</label>
-                                <input type="file" class="form-control-file" name="homeImage">
+                                @Html.LabelFor(m => m.PropertyImage)
+                                @Html.TextBoxFor(m => m.PropertyImage, new
+                                    {
+                                        type = "file",
+                                        @class = "form-control-file"
+                                    })
+                                @Html.ValidationMessageFor(m => m.PropertyImage)
                             </div>
 
+                            <!-- Submit Button -->
                             <div class="text-center">
-                                <button type="submit" class="btn btn-dark btn-lg px-5">Add Home</button>
+                                <button type="submit" class="btn btn-dark btn-lg px-5">Thêm Tài Sản</button>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
         </div>
-
     </div>
 </div>
