--- a/Areas/Account/Views/Login/Index.cshtml
+++ b/Areas/Account/Views/Login/Index.cshtml
@@ -1,3 +1,5 @@
+@model LoginController
+
 <!DOCTYPE html>
 <html class="h-100" lang="en">
 
@@ -5,34 +7,90 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Quixlab - Bootstrap Admin Dashboard Template by Themefisher.com</title>
-    <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
-    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> -->
-    <link href="css/style.css" rel="stylesheet">
-
+    <title>Login</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon_2.png">
+    <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="~/css/site.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
+<style>
+    body {
+        background-color: #f4f7fa;
+    }
+
+    .login-form-bg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+    }
+
+    .card {
+        border-radius: 10px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        padding: 40px;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+    }
+
+    .input-group {
+        position: relative;
+    }
+
+    .input-group .form-control {
+        padding-right: 40px;
+    }
+
+    .toggle-password {
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        color: #888;
+        z-index: 1;
+    }
+
+    button {
+        margin-top: 10px;
+        padding: 10px;
+        border-radius: 5px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        width: 100%;
+    }
+
+    button:hover {
+        background-color: #0056b3;
+    }
+
+    .login-form__footer {
+        text-align: center;
+        margin-top: 30px;
+        color: #777;
+    }
+
+    .text-primary {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    .text-primary:hover {
+        text-decoration: underline;
+    }
+
+    h4 {
+        margin-bottom: 1.5rem;
+        line-height: 2rem;
+        text-align: center;
+    }
+</style>
+
 <body class="h-100">
-
-    <!--*******************
-        Preloader start
-    ********************-->
-    <div id="preloader">
-        <div class="loader">
-            <svg class="circular" viewBox="25 25 50 50">
-                <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="3" stroke-miterlimit="10" />
-            </svg>
-        </div>
-    </div>
-    <!--*******************
-        Preloader end
-    ********************-->
-
-
-
-
-
     <div class="login-form-bg h-100">
         <div class="container h-100">
             <div class="row justify-content-center h-100">
@@ -40,20 +98,40 @@
                     <div class="form-input-content">
                         <div class="card login-form mb-0">
                             <div class="card-body pt-5">
-                                <a class="text-center" href="index.html">
-                                    <h4>Rosella</h4>
-                                </a>
-
-                                <form class="mt-5 mb-5 login-input">
+                                <h4>Login to Your Hostel <br> Management System</h4>
+                                <form asp-action="Index" method="post">
                                     <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Email">
+                                        @Html.TextBoxFor(m => m.Input.Username, new
+                                            {
+                                                @class = "form-control",
+                                                placeholder = "Username"
+                                            })
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control" placeholder="Password">
+                                        <div class="input-group"> <!-- Thêm input-group cho ô mật khẩu -->
+                                            @Html.PasswordFor(m => m.Input.Password, new
+                                                {
+                                                    @class = "form-control",
+                                                    placeholder = "Password",
+                                                    id = "passwordInput"
+                                                })
+                                            <span class="toggle-password" onclick="togglePassword()">
+                                                <i class="fas fa-eye" id="eyeIcon"></i> <!-- Biểu tượng hiển thị -->
+                                            </span>
+                                        </div>
                                     </div>
-                                    <button class="btn login-form__btn submit w-100">Sign In</button>
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(m => m.Input.RememberMe, new
+                                            {
+                                                @class = "form-check-input",
+                                                id
+                                                 = "rememberMe"
+                                            }) <!-- Sử dụng asp-for -->
+                                        <label class="form-check-label" for="rememberMe">Remember Me</label>
+                                    </div>
+                                    <button type="submit" class="btn login-form__btn submit">Sign In</button>
                                 </form>
-                                <p class="mt-5 login-form__footer">Dont have account? <a href="page-register.html"
+                                <p class="mt-5 login-form__footer">Don't have an account? <a href="page-register.html"
                                         class="text-primary">Sign Up</a> now</p>
                             </div>
                         </div>
@@ -62,15 +140,59 @@
             </div>
         </div>
     </div>
+    <div class="bootstrap-modal">
+        <div class="modal fade" id="basicModal">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-body">Your username or password is incorrect.</div>
+                    <div class="modal-footer">
+                        <button style="width:auto" type="button" class="btn btn-primary"
+                            data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="~/plugins/common/common.min.js"></script>
+    <script src="~/js/custom.min.js"></script>
+    <script src="~/js/settings.js"></script>
+    <script src="~/js/gleek.js"></script>
+    <script src="~/js/styleSwitcher.js"></script>
 
-    <!--**********************************
-        Scripts
-    ***********************************-->
-    <script src="plugins/common/common.min.js"></script>
-    <script src="js/custom.min.js"></script>
-    <script src="js/settings.js"></script>
-    <script src="js/gleek.js"></script>
-    <script src="js/styleSwitcher.js"></script>
+    <script>
+        // Show Modal Function
+        function showModal() {
+            $('#basicModal').modal('show');
+        }
+
+        // Check if Login Failed
+        @if (ViewBag.LoginFailed != null && ViewBag.LoginFailed)
+        {
+            <text>
+                    $(document).ready(function() {
+                        showModal();
+                                        });
+            </text>
+        }
+
+            // Toggle Password Function
+            function togglePassword() {
+                var passwordInput = document.getElementById("passwordInput");
+                var eyeIcon = document.getElementById("eyeIcon");
+                if (passwordInput.type === "password") {
+                    passwordInput.type = "text";
+                    eyeIcon.classList.remove("fa-eye");
+                    eyeIcon.classList.add("fa-eye-slash");
+                } else {
+                    passwordInput.type = "password";
+                    eyeIcon.classList.remove("fa-eye-slash");
+                    eyeIcon.classList.add("fa-eye");
+                }
+            }
+    </script>
 </body>
 
 </html>
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
