--- a/Areas/Account/Views/Login/Index.cshtml
+++ b/Areas/Account/Views/Login/Index.cshtml
@@ -108,7 +108,7 @@
                                             })
                                     </div>
                                     <div class="form-group">
-                                        <div class="input-group"> <!-- Thêm input-group cho ô mật khẩu -->
+                                        <div class="input-group">
                                             @Html.PasswordFor(m => m.Input.Password, new
                                                 {
                                                     @class = "form-control",
@@ -116,18 +116,21 @@
                                                     id = "passwordInput"
                                                 })
                                             <span class="toggle-password" onclick="togglePassword()">
-                                                <i class="fas fa-eye" id="eyeIcon"></i> <!-- Biểu tượng hiển thị -->
+                                                <i class="fas fa-eye" id="eyeIcon"></i>
                                             </span>
                                         </div>
                                     </div>
-                                    <div class="form-check">
-                                        @Html.CheckBoxFor(m => m.Input.RememberMe, new
+                                    <div class="form-check mb-2">
+                                        @Html.CheckBoxFor(model => model.Input.RememberMe, new
                                             {
-                                                @class = "form-check-input",
-                                                id
-                                                 = "rememberMe"
-                                            }) <!-- Sử dụng asp-for -->
-                                        <label class="form-check-label" for="rememberMe">Remember Me</label>
+                                                @class = "form-check-input"
+                                            })
+                                        @Html.LabelFor(model => model.Input.RememberMe, new
+                                            {
+                                                @class =
+                                                 "form-check-label",
+                                            })
+
                                     </div>
                                     <button type="submit" class="btn login-form__btn submit">Sign In</button>
                                 </form>
@@ -153,6 +156,7 @@
             </div>
         </div>
     </div>
+
     <script src="~/plugins/common/common.min.js"></script>
     <script src="~/js/custom.min.js"></script>
     <script src="~/js/settings.js"></script>
@@ -171,7 +175,7 @@
             <text>
                     $(document).ready(function() {
                         showModal();
-                                        });
+                                                                                });
             </text>
         }
 
